--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
         <div class="profile-container">
           <img
             class="profile"
-            src="assets/images/profile.png"
+            src="assets/images/headshot.jpg"
             alt=""
             height="180px"
             width="180px"
             style="border-radius: 25%;"
           />
-          <h1 class="name">Michael Gary Scott</h1>
-          <h3 class="tagline">Manager and Entrepreneur</h3>
+          <h1 class="name">Claudia Nelson</h1>
+          <h3 class="tagline">Software Developer</h3>
         </div>
         <!--//profile-container-->
 
