--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="My awesome resume website!" />
-    <meta name="author" content="Abhinav Reddy" />
+    <meta name="author" content="Claudia Nelson" />
     <link rel="shortcut icon" href="favicon.ico" />
     <!-- Google Font -->
     <link
@@ -46,65 +46,96 @@
         <div class="profile-container">
           <img
             class="profile"
-            src="assets/images/profile.png"
+            src="assets/images/headshot.png"
             alt=""
             height="180px"
             width="180px"
             style="border-radius: 25%;"
           />
-          <h1 class="name">Michael Gary Scott</h1>
-          <h3 class="tagline">Manager and Entrepreneur</h3>
+          <h1 class="name">Claudia Nelson</h1>
+          <h3 class="tagline">Software Developer</h3>
         </div>
         <!--//profile-container-->
 
         <div class="contact-container container-block">
           <ul class="list-unstyled contact-list">
             <li class="address">
-              <i class="fas fa-address-book"></i>Scranton, PA 18510
+              <i class="fas fa-address-book"></i>Brandon, MS 39047
             </li>
             <li class="email">
               <i class="fas fa-envelope"></i
-              ><a href="mailto: michael.scott@dundermifflin.com"
-                >m.scott@dmifflin.com</a
+              ><a href="mailto: claudiaareneee@gmail.com"
+                >claudiaareneee@gmail.com</a
               >
             </li>
             <li class="phone">
               <i class="fas fa-phone"></i
-              ><a href="tel:0123 456 789">+1111 222 333</a>
+              ><a href="tel:423 582 0037">(423) 582 0037</a>
             </li>
             <li class="linkedin">
               <i class="fab fa-linkedin-in"></i
-              ><a href="#" target="_blank">linkedin.com/</a>
+              ><a href="https://www.linkedin.com/in/claudia-nelson-23941616b" target="_blank">LinkedIn</a>
             </li>
             <li class="github">
               <i class="fab fa-github"></i
-              ><a href="#" target="_blank">github.com/</a>
+              ><a href="#" target="_blank">github.com/claudiaareneee</a>
             </li>
             <li class="twitter">
               <i class="fab fa-twitter"></i
-              ><a href="https://twitter.com/" target="_blank">@twittername</a>
+              ><a href="https://twitter.com/" target="_blank">@claudiaarenee13</a>
             </li>
           </ul>
         </div>
         <!--//contact-container-->
         <div class="education-container container-block">
-          <h2 class="container-block-title">Education and Achievements</h2>
+          <h2 class="container-block-title">Education</h2>
+          
           <div class="item">
-            <h4 class="degree">Dundie Award</h4>
-            <h5 class="meta">World's Best Boss</h5>
-            <div class="time">2011</div>
+            <h4 class="degree">Bachelors of Computer Science</h4>
+            <h5 class="meta">Mississippi State University</h5>
+            <div class="time">May 2020 (Expected)</div>
           </div>
           <!--//item-->
           <div class="item">
-            <h4 class="degree">x2 Salesman of the Year</h4>
-            <h5 class="meta">Dunder Mifflin Inc.</h5>
-            <div class="time">2006 - Present</div>
+            <h4 class="degree">Associates of Arts</h4>
+            <h5 class="meta">Hinds Community College</h5>
+            <div class="time">May 2018</div>
+          </div>
+        </div>
+        <!--//education-container-->
+
+
+        <div class="education-container container-block">
+          <h2 class="container-block-title">Achievements</h2>
+          
+          <div class="item">
+            <h4 class="degree">Mississippi State President's Scholar</h4>
+            <h5 class="meta">Mississippi State University</h5>
+            <div class="time">2018 - 2019</div>
           </div>
           <!--//item-->
           <div class="item">
-            <h4 class="degree">High School Diploma</h4>
-            <h5 class="meta">Scranton High School</h5>
-            <div class="time">1978-1982</div>
+            <h4 class="degree">Phi Theta Kappa Vice President of Scholarship</h4>
+            <h5 class="meta">Hinds Community College</h5>
+            <div class="time">Spring 2018</div>
+          </div>
+          <!--//item-->
+          <div class="item">
+            <h4 class="degree">Phi Theta Kappa All MS Academic Team Award</h4>
+            <h5 class="meta">Hinds Community College</h5>
+            <div class="time">Spring 2018</div>
+          </div>
+          <!--//item-->
+          <div class="item">
+            <h4 class="degree">Hinds Community College District Subject Award in Mathematics</h4>
+            <h5 class="meta">Hinds Community College</h5>
+            <div class="time">Spring 2018</div>
+          </div>
+          <!--//item-->
+          <div class="item">
+            <h4 class="degree">Coca-Cola Bronze Scholar Award</h4>
+            <h5 class="meta">Hinds Community College</h5>
+            <div class="time">Spring 2018</div>
           </div>
         </div>
         <!--//education-container-->
@@ -112,20 +143,12 @@
         <div class="languages-container container-block">
           <h2 class="container-block-title">Languages</h2>
           <ul class="list-unstyled interests-list">
-            <li>English <span class="lang-desc">(Native)</span></li>
+            <li>Java</li>
+            <li>C++</li>
+            <li>MatLab</li>
+            <li>Python</li>
           </ul>
         </div>
-        <!--//interests-->
-
-        <div class="interests-container container-block">
-          <h2 class="container-block-title">Interests</h2>
-          <ul class="list-unstyled interests-list">
-            <li>Improv Acting</li>
-            <li>Filmmaking</li>
-            <li>Ice Skating</li>
-          </ul>
-        </div>
-        <!--//interests-->
       </div>
       <!--//sidebar-wrapper-->
 
@@ -161,11 +184,11 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">Regional Manager</h3>
-                <div class="time">2006-2011</div>
+                <h3 class="job-title">Undergraduate Research Assistant, Android Developer</h3>
+                <div class="time">2019 – current</div>
               </div>
               <!--//upper-row-->
-              <div class="company">Dunder Mifflin Inc.</div>
+              <div class="company">Mississippi State University</div>
             </div>
             <!--//meta-->
             <div class="details">
@@ -190,11 +213,11 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">CEO and Founder</h3>
-                <div class="time">2006</div>
+                <h3 class="job-title">Student Trainee</h3>
+                <div class="time">2018</div>
               </div>
               <!--//upper-row-->
-              <div class="company">Michael Scott Paper Company</div>
+              <div class="company">Army Corps of Engineers – Engineering, Research, and Development Center</div>
             </div>
             <!--//meta-->
             <div class="details">
@@ -213,11 +236,11 @@
           <div class="item">
             <div class="meta">
               <div class="upper-row">
-                <h3 class="job-title">Regional Manager</h3>
-                <div class="time">2001-2006</div>
+                <h3 class="job-title">Associate Trainer</h3>
+                <div class="time">2015 – 2018</div>
               </div>
               <!--//upper-row-->
-              <div class="company">Dunder Mifflin Inc.</div>
+              <div class="company">Panera Bread</div>
             </div>
             <!--//meta-->
             <div class="details">
